NEW - bug 171590: [api] make ITaskListElement's implement Comparable https://bugs.eclipse.org/bugs/show_bug.cgi?id=171590