@@ -50,6 +50,9 @@ public class HtmlStreamTokenizer {
 	/** current quote delimiter (single or double) */
 	private int quoteChar;
 
+	/** Allow class client to choose if tag attributes are escaped or not */
+	private boolean escapeTagValues;
+
 	/**
 	 * Constructor.
 	 * 
@@ -65,6 +68,11 @@ public class HtmlStreamTokenizer {
 		state = State.TEXT;
 		this.in = new BufferedReader(in);
 		this.base = base;
+		escapeTagValues = true;
+	}
+
+	public void escapeTagAttributes(boolean value) {
+		escapeTagValues = value;
 	}
 
 	/**
@@ -122,7 +130,7 @@ public class HtmlStreamTokenizer {
 				if (ch == '>') {
 					state = State.TEXT;
 					HtmlTag tag = new HtmlTag(base);
-					parseTag(textBuffer.toString(), tag);
+					parseTag(textBuffer.toString(), tag, escapeTagValues);
 					return new Token(tag, whitespaceBuffer);
 				}
 				if (ch == '<' && textBuffer.length() == 0) {
@@ -176,7 +184,7 @@ public class HtmlStreamTokenizer {
 	/**
 	 * Parses an HTML tag out of a string of characters.
 	 */
-	private static void parseTag(String s, HtmlTag tag) throws ParseException {
+	private static void parseTag(String s, HtmlTag tag, boolean escapeValues) throws ParseException {
 
 		int i = 0;
 		for (; i < s.length() && Character.isWhitespace(s.charAt(i)); i++) {
@@ -197,7 +205,7 @@ public class HtmlStreamTokenizer {
 		if (i == s.length()) {
 			return;
 		} else {
-			parseAttributes(tag, s, i);
+			parseAttributes(tag, s, i, escapeValues);
 			return;
 		}
 	}
@@ -205,7 +213,7 @@ public class HtmlStreamTokenizer {
 	/**
 	 * parses HTML tag attributes from a buffer and sets them in an HtmlTag
 	 */
-	private static void parseAttributes(HtmlTag tag, String s, int i) throws ParseException {
+	private static void parseAttributes(HtmlTag tag, String s, int i, boolean escapeValues) throws ParseException {
 		while (i < s.length()) {
 			// skip whitespace
 			while (i < s.length() && Character.isWhitespace(s.charAt(i)))
@@ -222,6 +230,11 @@ public class HtmlStreamTokenizer {
 				// just move forward
 			}
 			String attributeName = s.substring(start, i).toLowerCase();
+
+			if (attributeName.equals("/")) {
+				tag.setSelfTerminating(true);
+				continue;
+			}
 
 			for (; i < s.length() && Character.isWhitespace(s.charAt(i)); i++) {
 				// just move forward
@@ -252,7 +265,10 @@ public class HtmlStreamTokenizer {
 				}
 				if (i == s.length())
 					return; // shouldn't happen if input returned by nextToken
-				attributeValue = unescape(s.substring(start, i));
+				if (escapeValues)
+					attributeValue = unescape(s.substring(start, i));
+				else
+					attributeValue = s.substring(start, i);
 				i++;
 			} else if (s.charAt(i) == '\'') {
 				start = ++i;
@@ -450,16 +466,24 @@ public class HtmlStreamTokenizer {
 			}
 			if (value != null) {
 				if (type == TAG) {
-					sb.append('<');
+					// sb.append('<');
 				} else if (type == COMMENT) {
-					sb.append("<!");
+					sb.append("<!--");
 				}
 				sb.append(value);
 				if (type == TAG) {
-					sb.append('>');
+					// if(value instanceof HtmlTag) {
+					// HtmlTag htmlTag = (HtmlTag)value;
+					// if(htmlTag.getTagName().startsWith("?xml")) {
+					// sb.append("?>");
+					// }
+					// } else {
+					// sb.append('>');
+
 				} else if (type == COMMENT) {
 					sb.append("-->");
 				}
+
 			}
 			return sb.toString();
 		}
@@ -501,44 +525,44 @@ public class HtmlStreamTokenizer {
 	/*
 	 * Based on ISO 8879.
 	 * 
-	 * Portions © International Organization for Standardization 1986 Permission
-	 * to copy in any form is granted for use with conforming SGML systems and
-	 * applications as defined in ISO 8879, provided this notice is included in
-	 * all copies.
+	 * Portions (c) International Organization for Standardization 1986
+	 * Permission to copy in any form is granted for use with conforming SGML
+	 * systems and applications as defined in ISO 8879, provided this notice is
+	 * included in all copies.
 	 * 
 	 */
 	static {
 		entities = new HashMap<String, Character>();
-		entities.put(new String("nbsp"), new Character('\240')); // no-break
+		entities.put("nbsp",Character.valueOf('\240')); // no-break
 		// space =
 		// non-breaking
 		// space
-		entities.put(new String("iexcl"), new Character('\241')); // inverted
+		entities.put("iexcl",Character.valueOf('\241')); // inverted
 		// exclamation
 		// mark
-		entities.put(new String("cent"), new Character('\242')); // cent sign
-		entities.put(new String("pound"), new Character('\243')); // pound
+		entities.put("cent",Character.valueOf('\242')); // cent sign
+		entities.put("pound",Character.valueOf('\243')); // pound
 		// sign
-		entities.put(new String("curren"), new Character('\244')); // currency
+		entities.put("curren",Character.valueOf('\244')); // currency
 		// sign
-		entities.put(new String("yen"), new Character('\245')); // yen sign =
+		entities.put("yen",Character.valueOf('\245')); // yen sign =
 		// yuan sign
-		entities.put(new String("brvbar"), new Character('\246')); // broken
+		entities.put("brvbar",Character.valueOf('\246')); // broken
 		// bar =
 		// broken
 		// vertical
 		// bar
-		entities.put(new String("sect"), new Character('\247')); // section
+		entities.put("sect",Character.valueOf('\247')); // section
 		// sign
-		entities.put(new String("uml"), new Character('\250')); // diaeresis =
+		entities.put("uml",Character.valueOf('\250')); // diaeresis =
 		// spacing
 		// diaeresis
-		entities.put(new String("copy"), new Character('\251')); // copyright
+		entities.put("copy",Character.valueOf('\251')); // copyright
 		// sign
-		entities.put(new String("ordf"), new Character('\252')); // feminine
+		entities.put("ordf",Character.valueOf('\252')); // feminine
 		// ordinal
 		// indicator
-		entities.put(new String("laquo"), new Character('\253')); // left-pointing
+		entities.put("laquo",Character.valueOf('\253')); // left-pointing
 		// double
 		// angle
 		// quotation
@@ -546,65 +570,65 @@ public class HtmlStreamTokenizer {
 		// left
 		// pointing
 		// guillemet
-		entities.put(new String("not"), new Character('\254')); // not sign
-		entities.put(new String("shy"), new Character('\255')); // soft hyphen =
+		entities.put("not",Character.valueOf('\254')); // not sign
+		entities.put("shy",Character.valueOf('\255')); // soft hyphen =
 		// discretionary
 		// hyphen
-		entities.put(new String("reg"), new Character('\256')); // registered
+		entities.put("reg",Character.valueOf('\256')); // registered
 		// sign =
 		// registered
 		// trade mark
 		// sign
-		entities.put(new String("macr"), new Character('\257')); // macron =
+		entities.put("macr",Character.valueOf('\257')); // macron =
 		// spacing
 		// macron =
 		// overline
 		// = APL
 		// overbar
-		entities.put(new String("deg"), new Character('\260')); // degree sign
-		entities.put(new String("plusmn"), new Character('\261')); // plus-minus
+		entities.put("deg",Character.valueOf('\260')); // degree sign
+		entities.put("plusmn",Character.valueOf('\261')); // plus-minus
 		// sign =
 		// plus-or-minus
 		// sign
-		entities.put(new String("sup2"), new Character('\262')); // superscript
+		entities.put("sup2",Character.valueOf('\262')); // superscript
 		// two =
 		// superscript
 		// digit two
 		// = squared
-		entities.put(new String("sup3"), new Character('\263')); // superscript
+		entities.put("sup3",Character.valueOf('\263')); // superscript
 		// three =
 		// superscript
 		// digit
 		// three =
 		// cubed
-		entities.put(new String("acute"), new Character('\264')); // acute
+		entities.put("acute",Character.valueOf('\264')); // acute
 		// accent =
 		// spacing
 		// acute
-		entities.put(new String("micro"), new Character('\265')); // micro
+		entities.put("micro",Character.valueOf('\265')); // micro
 		// sign
-		entities.put(new String("para"), new Character('\266')); // pilcrow
+		entities.put("para",Character.valueOf('\266')); // pilcrow
 		// sign =
 		// paragraph
 		// sign
-		entities.put(new String("middot"), new Character('\267')); // middle
+		entities.put("middot",Character.valueOf('\267')); // middle
 		// dot =
 		// Georgian
 		// comma =
 		// Greek
 		// middle
 		// dot
-		entities.put(new String("cedil"), new Character('\270')); // cedilla =
+		entities.put("cedil",Character.valueOf('\270')); // cedilla =
 		// spacing
 		// cedilla
-		entities.put(new String("sup1"), new Character('\271')); // superscript
+		entities.put("sup1",Character.valueOf('\271')); // superscript
 		// one =
 		// superscript
 		// digit one
-		entities.put(new String("ordm"), new Character('\272')); // masculine
+		entities.put("ordm",Character.valueOf('\272')); // masculine
 		// ordinal
 		// indicator
-		entities.put(new String("raquo"), new Character('\273')); // right-pointing
+		entities.put("raquo",Character.valueOf('\273')); // right-pointing
 		// double
 		// angle
 		// quotation
@@ -612,20 +636,20 @@ public class HtmlStreamTokenizer {
 		// right
 		// pointing
 		// guillemet
-		entities.put(new String("frac14"), new Character('\274')); // vulgar
+		entities.put("frac14",Character.valueOf('\274')); // vulgar
 		// fraction
 		// one
 		// quarter =
 		// fraction
 		// one
 		// quarter
-		entities.put(new String("frac12"), new Character('\275')); // vulgar
+		entities.put("frac12",Character.valueOf('\275')); // vulgar
 		// fraction
 		// one half
 		// =
 		// fraction
 		// one half
-		entities.put(new String("frac34"), new Character('\276')); // vulgar
+		entities.put("frac34",Character.valueOf('\276')); // vulgar
 		// fraction
 		// three
 		// quarters
@@ -633,13 +657,13 @@ public class HtmlStreamTokenizer {
 		// fraction
 		// three
 		// quarters
-		entities.put(new String("iquest"), new Character('\277')); // inverted
+		entities.put("iquest",Character.valueOf('\277')); // inverted
 		// question
 		// mark =
 		// turned
 		// question
 		// mark
-		entities.put(new String("Agrave"), new Character('\300')); // latin
+		entities.put("Agrave",Character.valueOf('\300')); // latin
 		// capital
 		// letter A
 		// with
@@ -648,27 +672,27 @@ public class HtmlStreamTokenizer {
 		// capital
 		// letter A
 		// grave
-		entities.put(new String("Aacute"), new Character('\301')); // latin
+		entities.put("Aacute",Character.valueOf('\301')); // latin
 		// capital
 		// letter A
 		// with
 		// acute
-		entities.put(new String("Acirc"), new Character('\302')); // latin
+		entities.put("Acirc",Character.valueOf('\302')); // latin
 		// capital
 		// letter A
 		// with
 		// circumflex
-		entities.put(new String("Atilde"), new Character('\303')); // latin
+		entities.put("Atilde",Character.valueOf('\303')); // latin
 		// capital
 		// letter A
 		// with
 		// tilde
-		entities.put(new String("Auml"), new Character('\304')); // latin
+		entities.put("Auml",Character.valueOf('\304')); // latin
 		// capital
 		// letter A
 		// with
 		// diaeresis
-		entities.put(new String("Aring"), new Character('\305')); // latin
+		entities.put("Aring",Character.valueOf('\305')); // latin
 		// capital
 		// letter A
 		// with ring
@@ -677,93 +701,93 @@ public class HtmlStreamTokenizer {
 		// capital
 		// letter A
 		// ring
-		entities.put(new String("AElig"), new Character('\306')); // latin
+		entities.put("AElig",Character.valueOf('\306')); // latin
 		// capital
 		// letter AE
 		// = latin
 		// capital
 		// ligature
 		// AE
-		entities.put(new String("Ccedil"), new Character('\307')); // latin
+		entities.put("Ccedil",Character.valueOf('\307')); // latin
 		// capital
 		// letter C
 		// with
 		// cedilla
-		entities.put(new String("Egrave"), new Character('\310')); // latin
+		entities.put("Egrave",Character.valueOf('\310')); // latin
 		// capital
 		// letter E
 		// with
 		// grave
-		entities.put(new String("Eacute"), new Character('\311')); // latin
+		entities.put("Eacute",Character.valueOf('\311')); // latin
 		// capital
 		// letter E
 		// with
 		// acute
-		entities.put(new String("Ecirc"), new Character('\312')); // latin
+		entities.put("Ecirc",Character.valueOf('\312')); // latin
 		// capital
 		// letter E
 		// with
 		// circumflex
-		entities.put(new String("Euml"), new Character('\313')); // latin
+		entities.put("Euml",Character.valueOf('\313')); // latin
 		// capital
 		// letter E
 		// with
 		// diaeresis
-		entities.put(new String("Igrave"), new Character('\314')); // latin
+		entities.put("Igrave",Character.valueOf('\314')); // latin
 		// capital
 		// letter I
 		// with
 		// grave
-		entities.put(new String("Iacute"), new Character('\315')); // latin
+		entities.put("Iacute",Character.valueOf('\315')); // latin
 		// capital
 		// letter I
 		// with
 		// acute
-		entities.put(new String("Icirc"), new Character('\316')); // latin
+		entities.put("Icirc",Character.valueOf('\316')); // latin
 		// capital
 		// letter I
 		// with
 		// circumflex
-		entities.put(new String("Iuml"), new Character('\317')); // latin
+		entities.put("Iuml",Character.valueOf('\317')); // latin
 		// capital
 		// letter I
 		// with
 		// diaeresis
-		entities.put(new String("ETH"), new Character('\320')); // latin capital
+		entities.put("ETH",Character.valueOf('\320')); // latin capital
 		// letter ETH
-		entities.put(new String("Ntilde"), new Character('\321')); // latin
+		entities.put("Ntilde",Character.valueOf('\321')); // latin
 		// capital
 		// letter N
 		// with
 		// tilde
-		entities.put(new String("Ograve"), new Character('\322')); // latin
+		entities.put("Ograve",Character.valueOf('\322')); // latin
 		// capital
 		// letter O
 		// with
 		// grave
-		entities.put(new String("Oacute"), new Character('\323')); // latin
+		entities.put("Oacute",Character.valueOf('\323')); // latin
 		// capital
 		// letter O
 		// with
 		// acute
-		entities.put(new String("Ocirc"), new Character('\324')); // latin
+		entities.put("Ocirc",Character.valueOf('\324')); // latin
 		// capital
 		// letter O
 		// with
 		// circumflex
-		entities.put(new String("Otilde"), new Character('\325')); // latin
+		entities.put("Otilde",Character.valueOf('\325')); // latin
 		// capital
 		// letter O
 		// with
 		// tilde
-		entities.put(new String("Ouml"), new Character('\326')); // latin
+		entities.put("Ouml",Character.valueOf('\326')); // latin
 		// capital
 		// letter O
 		// with
 		// diaeresis
-		entities.put(new String("times"), new Character('\327')); // multiplication
+		entities.put("times",Character.valueOf('\327')); // multiplication
 		// sign
-		entities.put(new String("Oslash"), new Character('\330')); // latin
+		entities.put("Oslash",Character.valueOf('\330')); // latin
 		// capital
 		// letter O
 		// with
@@ -772,41 +796,41 @@ public class HtmlStreamTokenizer {
 		// capital
 		// letter O
 		// slash
-		entities.put(new String("Ugrave"), new Character('\331')); // latin
+		entities.put("Ugrave",Character.valueOf('\331')); // latin
 		// capital
 		// letter U
 		// with
 		// grave
-		entities.put(new String("Uacute"), new Character('\332')); // latin
+		entities.put("Uacute",Character.valueOf('\332')); // latin
 		// capital
 		// letter U
 		// with
 		// acute
-		entities.put(new String("Ucirc"), new Character('\333')); // latin
+		entities.put("Ucirc",Character.valueOf('\333')); // latin
 		// capital
 		// letter U
 		// with
 		// circumflex
-		entities.put(new String("Uuml"), new Character('\334')); // latin
+		entities.put("Uuml",Character.valueOf('\334')); // latin
 		// capital
 		// letter U
 		// with
 		// diaeresis
-		entities.put(new String("Yacute"), new Character('\335')); // latin
+		entities.put("Yacute",Character.valueOf('\335')); // latin
 		// capital
 		// letter Y
 		// with
 		// acute
-		entities.put(new String("THORN"), new Character('\336')); // latin
+		entities.put("THORN",Character.valueOf('\336')); // latin
 		// capital
 		// letter
 		// THORN
-		entities.put(new String("szlig"), new Character('\337')); // latin
+		entities.put("szlig",Character.valueOf('\337')); // latin
 		// small
 		// letter
 		// sharp s =
 		// ess-zed
-		entities.put(new String("agrave"), new Character('\340')); // latin
+		entities.put("agrave",Character.valueOf('\340')); // latin
 		// small
 		// letter a
 		// with
@@ -815,27 +839,27 @@ public class HtmlStreamTokenizer {
 		// small
 		// letter a
 		// grave
-		entities.put(new String("aacute"), new Character('\341')); // latin
+		entities.put("aacute",Character.valueOf('\341')); // latin
 		// small
 		// letter a
 		// with
 		// acute
-		entities.put(new String("acirc"), new Character('\342')); // latin
+		entities.put("acirc",Character.valueOf('\342')); // latin
 		// small
 		// letter a
 		// with
 		// circumflex
-		entities.put(new String("atilde"), new Character('\343')); // latin
+		entities.put("atilde",Character.valueOf('\343')); // latin
 		// small
 		// letter a
 		// with
 		// tilde
-		entities.put(new String("auml"), new Character('\344')); // latin
+		entities.put("auml",Character.valueOf('\344')); // latin
 		// small
 		// letter a
 		// with
 		// diaeresis
-		entities.put(new String("aring"), new Character('\345')); // latin
+		entities.put("aring",Character.valueOf('\345')); // latin
 		// small
 		// letter a
 		// with ring
@@ -844,93 +868,93 @@ public class HtmlStreamTokenizer {
 		// small
 		// letter a
 		// ring
-		entities.put(new String("aelig"), new Character('\346')); // latin
+		entities.put("aelig",Character.valueOf('\346')); // latin
 		// small
 		// letter ae
 		// = latin
 		// small
 		// ligature
 		// ae
-		entities.put(new String("ccedil"), new Character('\347')); // latin
+		entities.put("ccedil",Character.valueOf('\347')); // latin
 		// small
 		// letter c
 		// with
 		// cedilla
-		entities.put(new String("egrave"), new Character('\350')); // latin
+		entities.put("egrave",Character.valueOf('\350')); // latin
 		// small
 		// letter e
 		// with
 		// grave
-		entities.put(new String("eacute"), new Character('\351')); // latin
+		entities.put("eacute",Character.valueOf('\351')); // latin
 		// small
 		// letter e
 		// with
 		// acute
-		entities.put(new String("ecirc"), new Character('\352')); // latin
+		entities.put("ecirc",Character.valueOf('\352')); // latin
 		// small
 		// letter e
 		// with
 		// circumflex
-		entities.put(new String("euml"), new Character('\353')); // latin
+		entities.put("euml",Character.valueOf('\353')); // latin
 		// small
 		// letter e
 		// with
 		// diaeresis
-		entities.put(new String("igrave"), new Character('\354')); // latin
+		entities.put("igrave",Character.valueOf('\354')); // latin
 		// small
 		// letter i
 		// with
 		// grave
-		entities.put(new String("iacute"), new Character('\355')); // latin
+		entities.put("iacute",Character.valueOf('\355')); // latin
 		// small
 		// letter i
 		// with
 		// acute
-		entities.put(new String("icirc"), new Character('\356')); // latin
+		entities.put("icirc",Character.valueOf('\356')); // latin
 		// small
 		// letter i
 		// with
 		// circumflex
-		entities.put(new String("iuml"), new Character('\357')); // latin
+		entities.put("iuml",Character.valueOf('\357')); // latin
 		// small
 		// letter i
 		// with
 		// diaeresis
-		entities.put(new String("eth"), new Character('\360')); // latin small
+		entities.put("eth",Character.valueOf('\360')); // latin small
 		// letter eth
-		entities.put(new String("ntilde"), new Character('\361')); // latin
+		entities.put("ntilde",Character.valueOf('\361')); // latin
 		// small
 		// letter n
 		// with
 		// tilde
-		entities.put(new String("ograve"), new Character('\362')); // latin
+		entities.put("ograve",Character.valueOf('\362')); // latin
 		// small
 		// letter o
 		// with
 		// grave
-		entities.put(new String("oacute"), new Character('\363')); // latin
+		entities.put("oacute",Character.valueOf('\363')); // latin
 		// small
 		// letter o
 		// with
 		// acute
-		entities.put(new String("ocirc"), new Character('\364')); // latin
+		entities.put("ocirc",Character.valueOf('\364')); // latin
 		// small
 		// letter o
 		// with
 		// circumflex
-		entities.put(new String("otilde"), new Character('\365')); // latin
+		entities.put("otilde",Character.valueOf('\365')); // latin
 		// small
 		// letter o
 		// with
 		// tilde
-		entities.put(new String("ouml"), new Character('\366')); // latin
+		entities.put("ouml",Character.valueOf('\366')); // latin
 		// small
 		// letter o
 		// with
 		// diaeresis
-		entities.put(new String("divide"), new Character('\367')); // division
+		entities.put("divide",Character.valueOf('\367')); // division
 		// sign
-		entities.put(new String("oslash"), new Character('\370')); // latin
+		entities.put("oslash",Character.valueOf('\370')); // latin
 		// small
 		// letter o
 		// with
@@ -939,56 +963,56 @@ public class HtmlStreamTokenizer {
 		// small
 		// letter o
 		// slash
-		entities.put(new String("ugrave"), new Character('\371')); // latin
+		entities.put("ugrave",Character.valueOf('\371')); // latin
 		// small
 		// letter u
 		// with
 		// grave
-		entities.put(new String("uacute"), new Character('\372')); // latin
+		entities.put("uacute",Character.valueOf('\372')); // latin
 		// small
 		// letter u
 		// with
 		// acute
-		entities.put(new String("ucirc"), new Character('\373')); // latin
+		entities.put("ucirc",Character.valueOf('\373')); // latin
 		// small
 		// letter u
 		// with
 		// circumflex
-		entities.put(new String("uuml"), new Character('\374')); // latin
+		entities.put("uuml",Character.valueOf('\374')); // latin
 		// small
 		// letter u
 		// with
 		// diaeresis
-		entities.put(new String("yacute"), new Character('\375')); // latin
+		entities.put("yacute",Character.valueOf('\375')); // latin
 		// small
 		// letter y
 		// with
 		// acute
-		entities.put(new String("thorn"), new Character('\376')); // latin
+		entities.put("thorn",Character.valueOf('\376')); // latin
 		// small
 		// letter
 		// thorn
-		entities.put(new String("yuml"), new Character('\377')); // latin
+		entities.put("yuml",Character.valueOf('\377')); // latin
 		// small
 		// letter y
 		// with
 		// diaeresis
 
 		// Special characters
-		entities.put(new String("quot"), new Character('\42')); // quotation
+		entities.put("quot",Character.valueOf('\42')); // quotation
 		// mark = APL
 		// quote
-		entities.put(new String("amp"), new Character('\46')); // ampersand
-		entities.put(new String("lt"), new Character('\74')); // less-than
+		entities.put("amp",Character.valueOf('\46')); // ampersand
+		entities.put("lt",Character.valueOf('\74')); // less-than
 		// sign
-		entities.put(new String("gt"), new Character('\76')); // greater-than
+		entities.put("gt",Character.valueOf('\76')); // greater-than
 		// sign
 		// Latin Extended-A
-		entities.put(new String("OElig"), new Character('\u0152')); // latin
+		entities.put("OElig",Character.valueOf('\u0152')); // latin
 		// capital
 		// ligature
 		// OE
-		entities.put(new String("oelig"), new Character('\u0153')); // latin
+		entities.put("oelig",Character.valueOf('\u0153')); // latin
 		// small
 		// ligature
 		// oe,
@@ -1000,78 +1024,78 @@ public class HtmlStreamTokenizer {
 		// character
 		// in some
 		// languages
-		entities.put(new String("Scaron"), new Character('\u0160')); // latin
+		entities.put("Scaron",Character.valueOf('\u0160')); // latin
 		// capital
 		// letter
 		// S
 		// with
 		// caron
-		entities.put(new String("scaron"), new Character('\u0161')); // latin
+		entities.put("scaron",Character.valueOf('\u0161')); // latin
 		// small
 		// letter
 		// s
 		// with
 		// caron
-		entities.put(new String("Yuml"), new Character('\u0178')); // latin
+		entities.put("Yuml",Character.valueOf('\u0178')); // latin
 		// capital
 		// letter Y
 		// with
 		// diaeresis
 		// Spacing Modifier Letters
-		entities.put(new String("circ"), new Character('\u02c6')); // modifier
+		entities.put("circ",Character.valueOf('\u02c6')); // modifier
 		// letter
 		// circumflex
 		// accent
-		entities.put(new String("tilde"), new Character('\u02dc')); // small
+		entities.put("tilde",Character.valueOf('\u02dc')); // small
 		// tilde
 		// General punctuation
-		entities.put(new String("ensp"), new Character('\u2002')); // en space
-		entities.put(new String("emsp"), new Character('\u2003')); // em space
-		entities.put(new String("thinsp"), new Character('\u2009')); // thin
+		entities.put("ensp",Character.valueOf('\u2002')); // en space
+		entities.put("emsp",Character.valueOf('\u2003')); // em space
+		entities.put("thinsp",Character.valueOf('\u2009')); // thin
 		// space
-		entities.put(new String("zwnj"), new Character('\u200c')); // zero
+		entities.put("zwnj",Character.valueOf('\u200c')); // zero
 		// width
 		// non-joiner
-		entities.put(new String("zwj"), new Character('\u200d')); // zero
+		entities.put("zwj",Character.valueOf('\u200d')); // zero
 		// width
 		// joiner
-		entities.put(new String("lrm"), new Character('\u200e')); // left-to-right
+		entities.put("lrm",Character.valueOf('\u200e')); // left-to-right
 		// mark
-		entities.put(new String("rlm"), new Character('\u200f')); // right-to-left
+		entities.put("rlm",Character.valueOf('\u200f')); // right-to-left
 		// mark
-		entities.put(new String("ndash"), new Character('\u2013')); // en dash
-		entities.put(new String("mdash"), new Character('\u2014')); // em dash
-		entities.put(new String("lsquo"), new Character('\u2018')); // left
+		entities.put("ndash",Character.valueOf('\u2013')); // en dash
+		entities.put("mdash",Character.valueOf('\u2014')); // em dash
+		entities.put("lsquo",Character.valueOf('\u2018')); // left
 		// single
 		// quotation
 		// mark
-		entities.put(new String("rsquo"), new Character('\u2019')); // right
+		entities.put("rsquo",Character.valueOf('\u2019')); // right
 		// single
 		// quotation
 		// mark
-		entities.put(new String("sbquo"), new Character('\u201a')); // single
+		entities.put("sbquo",Character.valueOf('\u201a')); // single
 		// low-9
 		// quotation
 		// mark
-		entities.put(new String("ldquo"), new Character('\u201c')); // left
+		entities.put("ldquo",Character.valueOf('\u201c')); // left
 		// double
 		// quotation
 		// mark
-		entities.put(new String("rdquo"), new Character('\u201d')); // right
+		entities.put("rdquo",Character.valueOf('\u201d')); // right
 		// double
 		// quotation
 		// mark
-		entities.put(new String("bdquo"), new Character('\u201e')); // double
+		entities.put("bdquo",Character.valueOf('\u201e')); // double
 		// low-9
 		// quotation
 		// mark
-		entities.put(new String("dagger"), new Character('\u2020')); // dagger
-		entities.put(new String("Dagger"), new Character('\u2021')); // double
+		entities.put("dagger",Character.valueOf('\u2020')); // dagger
+		entities.put("Dagger",Character.valueOf('\u2021')); // double
 		// dagger
-		entities.put(new String("permil"), new Character('\u2030')); // per
+		entities.put("permil",Character.valueOf('\u2030')); // per
 		// mille
 		// sign
-		entities.put(new String("lsaquo"), new Character('\u2039')); // single
+		entities.put("lsaquo",Character.valueOf('\u2039')); // single
 		// left-pointing
 		// angle
 		// quotation
@@ -1079,7 +1103,7 @@ public class HtmlStreamTokenizer {
 		// not
 		// yet
 		// standardized
-		entities.put(new String("rsaquo"), new Character('\u203a')); // single
+		entities.put("rsaquo",Character.valueOf('\u203a')); // single
 		// right-pointing
 		// angle
 		// quotation
@@ -1087,6 +1111,6 @@ public class HtmlStreamTokenizer {
 		// not
 		// yet
 		// standardized
-		entities.put(new String("euro"), new Character('\u20ac')); // euro sign
+		entities.put("euro",Character.valueOf('\u20ac')); // euro sign
 	}
 }
